alterando parametros do forms

--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
 
 
         <div class="right-login">
-
-            <div class="card-login">
+            
+            <form class="card-login">
                 <h1>LOGIN</h1>
                 <div class="textfield">
                     <label for="usuario">Usuario</label>
-                    <input type="text" name="usario" placeholder="usuario">
+                    <input type="text" name="email" placeholder="email@exemplo.com" required>
                 </div>
                 <div class="textfield">
                     <label for="senha">Senha</label>
-                    <input type="password" name="senha" placeholder="senha">
-                    <button class="btn-login">Login</button>
+                    <input type="password" name="senha" placeholder="senha" required>
+                    <input type="submit" value="Login" class="btn-login">
                 </div>
 
-            </div>
+            </form>
         </div>
     </div>
 </body>
